--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <canvas style="border: thin solid" id="canvas1" width="600" height="400"></canvas>
 <script src="index.js"></script>
-<div>
+<div id="info">
   Mandelbrot
 </div>
 </body>
