--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
 </head>
 <body>
 <canvas style="border: thin solid" id="canvas1" width="600" height="400"></canvas>
-<script src="index.js"></script>
+
+<div>
+  <button id="backButton">Back</button>
+  <input type="text" id="iterText" value="100" style="width: 50px;">
+  <button id="iterButton">Iters</button>
+
+</div>
+
 <div id="info">
   Mandelbrot
 </div>
+<script src="index.js"></script>
 </body>
 </html>
