--- a/index.html
+++ b/index.html
@@ -3,20 +3,19 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<canvas style="border: thin solid" id="canvas1" width="600" height="400"></canvas>
+<canvas id="canvas1" width="600" height="400"></canvas>
 
 <div>
-  <button id="backButton">Back</button>
-  <input type="text" id="iterText" value="100" style="width: 50px;">
+  <input type="checkbox" id="colorCheck" title="Colored"  />
+  <input type="text" id="iterText" value="100" title="Infinity Substitution"  />
   <button id="iterButton">Iters</button>
-
+  <span id="info"></span>
+  <span id="iter"></span>
 </div>
 
-<div id="info">
-  Mandelbrot
-</div>
 <script src="index.js"></script>
 </body>
 </html>
