--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <canvas id="canvas1" width="600" height="400"></canvas>
 
 <div>
-  <input type="checkbox" id="colorCheck" title="Colored"  />
+  <span class="panel">
+  <input type="radio" name="colorSchemes" checked title="BlackWhite">
+  <input type="radio" name="colorSchemes" title="Fair" >
+  <input type="radio" name="colorSchemes" title="Zebra" >
+  <input type="radio" name="colorSchemes" title="Smooth" >
+  </span>
+
   <input type="text" id="iterText" value="100" title="Infinity Substitution"  />
   <button id="iterButton">Iters</button>
   <span id="info"></span>
