--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <input type="radio" name="colorSchemes" checked title="BlackWhite">
   <input type="radio" name="colorSchemes" title="Fair" >
   <input type="radio" name="colorSchemes" title="Zebra" >
-  <input type="radio" name="colorSchemes" title="Smooth" >
+  <input type="radio" name="colorSchemes" title="Red" >
+  <input type="radio" name="colorSchemes" title="Green" >
+  <input type="radio" name="colorSchemes" title="Blue" >
   </span>
 
   <input type="text" id="iterText" value="100" title="Infinity Substitution"  />
