--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <canvas id="canvas1" width="600" height="400"></canvas>
 
 <div>
+  <button id="resetButton">Reset</button>
   <span class="panel">
   <input type="radio" name="colorSchemes" checked title="BlackWhite">
   <input type="radio" name="colorSchemes" title="Fair" >
@@ -17,6 +18,9 @@
   <input type="radio" name="colorSchemes" title="Green" >
   <input type="radio" name="colorSchemes" title="Blue" >
   </span>
+  <input type="color" id="darkColor" title="Dark Color" value="#000000" >
+  <input type="color" id="lightColor" title="Light Color" value="#FFFFFF" >
+  <input type="color" id="thirdColor" title="Third Color" value="#FFFFFF" >
 
   <input type="text" id="iterText" value="100" title="Infinity Substitution"  />
   <button id="iterButton">Iters</button>
