--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
 <div>
   <button id="resetButton">Reset</button>
   <span class="panel">
-  <input type="radio" name="colorSchemes" checked title="BlackWhite">
-  <input type="radio" name="colorSchemes" title="Fair" >
-  <input type="radio" name="colorSchemes" title="Zebra" >
-  <input type="radio" name="colorSchemes" title="Red" >
-  <input type="radio" name="colorSchemes" title="Green" >
-  <input type="radio" name="colorSchemes" title="Blue" >
+  <input type="radio" name="colorSchemes" checked title="BlackWhite" value="0">
+  <input type="radio" name="colorSchemes" title="Fair" value="1">
+  <input type="radio" name="colorSchemes" title="Zebra" value="2">
+  <input type="radio" name="colorSchemes" title="Red" value="3">
   </span>
   <input type="color" id="darkColor" title="Dark Color" value="#000000" >
   <input type="color" id="lightColor" title="Light Color" value="#FFFFFF" >
