--- a/index.html
+++ b/index.html
@@ -10,18 +10,17 @@
 
 <div>
   <button id="resetButton">Reset</button>
-  <span class="panel">
-  <input type="radio" name="themes" checked title="BlackWhite" value="0">
-  <input type="radio" name="themes" title="Fair" value="1">
-  <input type="radio" name="themes" title="Zebra" value="2">
-  <input type="radio" name="themes" title="Three colors" value="3">
-  </span>
+  <div class="panel">
+    <input type="radio" name="themes" checked title="BlackWhite" value="0">
+    <input type="radio" name="themes" title="Fair" value="1">
+    <input type="radio" name="themes" title="Zebra" value="2">
+    <input type="radio" name="themes" title="Three colors" value="3">
+  </div>
   <input type="color" id="darkColor" title="Dark Color" value="#000000" >
   <input type="color" id="lightColor" title="Light Color" value="#FFFFFF" >
   <input type="color" id="thirdColor" title="Third Color" value="#FFFFFF" >
 
   <input type="text" id="iterText" value="100" title="Infinity Substitution"  />
-  <button id="iterButton">Iters</button>
   <span id="info"></span>
   <span id="iter"></span>
 </div>
