--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<canvas id="canvas1" width="600" height="400"></canvas>
+    <canvas id="canvas1" width="600" height="400"></canvas>
     <div>
         <button id="resetButton">Reset</button>
         <button id="exportButton">Exp</button>
@@ -28,6 +28,10 @@
         <input type="text" id="importText" >
     </div>
 
-    <script src="index.js"></script>
+<script src="js/math.js"></script>
+<script src="js/drawing.js"></script>
+<script src="js/stock_n_storage.js"></script>
+<script src="js/themes.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
