--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+<h3 id="power">Z<sup>2</sup> + C</h3>
     <canvas id="canvas1" width="600" height="400"></canvas>
     <div>
         <button id="resetButton">Reset</button>
