--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-<h3 id="power">Z<sup>2</sup> + C</h3>
+<h3>
+  Z<sup id="power">2</sup> + C &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  D = <span id="delta">1</span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</h3>
     <canvas id="canvas1" width="600" height="400"></canvas>
     <div>
         <button id="resetButton">Reset</button>
         <button id="exportButton">Exp</button>
         <button id="importButton">Imp</button>
         <div class="panel">
-            <input type="radio" name="themes" checked title="BlackWhite" value="0">
+            <input type="radio" name="themes" checked title="Two Colors" value="0">
             <input type="radio" name="themes" title="Fair" value="1">
             <input type="radio" name="themes" title="Zebra" value="2">
-            <input type="radio" name="themes" title="Three colors" value="3">
+            <input type="radio" name="themes" title="Three Colors" value="3">
         </div>
         <input type="color" id="darkColor" title="Dark Color" value="#000000" >
         <input type="color" id="lightColor" title="Light Color" value="#FFFFFF" >
